<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_42sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/welcome_back"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_1sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
        app:boxBackgroundColor="@color/colorLight"
        app:boxStrokeColor="@color/colorYellow"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/colorTextSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        app:startIconDrawable="@drawable/ic_email">

        <EditText
            android:id="@+id/signInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextSecondary"
            android:textCursorDrawable="@null"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
        app:boxBackgroundColor="@color/colorLight"
        app:boxStrokeColor="@color/colorYellow"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/colorTextSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField2"
        app:startIconDrawable="@drawable/ic_lock">

        <EditText
            android:id="@+id/signInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:textCursorDrawable="@null"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:padding="@dimen/_10sdp"
        android:text="@string/sign_in"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16ssp"
        app:backgroundTint="@color/colorYellow"
        app:layout_constraintEnd_toEndOf="@id/textField3"
        app:layout_constraintStart_toStartOf="@id/textField3"
        app:layout_constraintTop_toBottomOf="@id/textField3" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/_54sdp"
        android:layout_height="@dimen/_54sdp"
        android:indeterminateTint="@color/colorYellow"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btnSignIn"
        app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
        app:layout_constraintStart_toStartOf="@id/btnSignIn"
        app:layout_constraintTop_toTopOf="@id/btnSignIn" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_1sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:padding="@dimen/_2sdp"
        android:text="@string/new_user_sign_up"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="@id/btnSignIn"
        app:layout_constraintStart_toStartOf="@id/btnSignIn"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>