<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_42sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/create_account"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_1sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/sign_up_to_get_started"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="@+id/text1"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:padding="@dimen/_4sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_person"
        app:civ_border_color="@color/colorYellow"
        app:civ_border_width="@dimen/_3sdp"
        app:civ_circle_background_color="@color/colorLight"
        app:layout_constraintStart_toStartOf="@id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
        app:boxBackgroundColor="@color/colorLight"
        app:boxStrokeColor="@color/colorYellow"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/colorTextSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:startIconDrawable="@drawable/ic_person">

        <EditText
            android:id="@+id/sighUpUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite"
            android:textCursorDrawable="@null"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
        app:boxBackgroundColor="@color/colorLight"
        app:boxStrokeColor="@color/colorYellow"
        app:boxStrokeWidth="@dimen/_1sdp"

        app:endIconMode="clear_text"
        app:hintTextColor="@color/colorTextSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField1"
        app:startIconDrawable="@drawable/ic_email">

        <EditText
            android:id="@+id/signUpUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWhite"
            android:textCursorDrawable="@null"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
        app:boxBackgroundColor="@color/colorLight"
        app:boxStrokeColor="@color/colorYellow"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/colorTextSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField2"
        app:startIconDrawable="@drawable/ic_lock">

        <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:textCursorDrawable="@null"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:padding="@dimen/_10sdp"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16ssp"
        app:backgroundTint="@color/colorYellow"
        app:layout_constraintEnd_toEndOf="@id/textField3"
        app:layout_constraintStart_toStartOf="@id/textField3"
        app:layout_constraintTop_toBottomOf="@id/textField3" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/_54sdp"
        android:layout_height="@dimen/_54sdp"
        android:indeterminateTint="@color/colorYellow"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btnSignUp"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
        app:layout_constraintStart_toStartOf="@id/btnSignUp"
        app:layout_constraintTop_toTopOf="@id/btnSignUp" />

    <TextView
        android:id="@+id/txtSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_1sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/existing_user_sign_in"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/_14ssp"
        android:padding="@dimen/_2sdp"
        app:layout_constraintEnd_toEndOf="@id/btnSignUp"
        app:layout_constraintStart_toStartOf="@id/btnSignUp"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>